# lithium

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  INSTALL.md  README.md  a.out  asset-manifest.json  index.html  install.sh  main.cc  make_single_headers.py  notes.txt  package-lock.json  package.json  precache-manifest.02d52bc11bc6f54e0fde43697c04b87f.js  precache-manifest.060b8605cd6444199b83263aa4597aa8.js  precache-manifest.0a637de8965e5f03a108bee067b29bb9.js  precache-manifest.0b9e390607fc4310d9242478bae44312.js  precache-manifest.0e1341e41d0646ab55c7fd9c1b8e2f83.js  precache-manifest.0e264dacfa23300f483b740d6d3add86.js  precache-manifest.0ec0fd497a8bf67ebe6e4917324d796f.js  precache-manifest.12473677e1ecc040819286c3b0cd1715.js  precache-manifest.13cfd40372cbbb28f81b6a9ef0404caf.js  precache-manifest.17f7cfe804ae8824e18a8fe78ee1c38f.js  precache-manifest.1997084aee1caa09ad385ae9c02c8593.js  precache-manifest.1f8f7a13f3ba8b772f9ad6e753bbd875.js  precache-manifest.20842934314b89f475143f496b3fa07a.js  precache-manifest.23c8c2dbd4f8141f9f79a39205ef5caf.js  precache-manifest.25ba3ccda71702a78733389af3391429.js  precache-manifest.32f5d34c046ca9c636868cf16ef94045.js  precache-manifest.3485dffba8f93d07235312cad4742910.js  precache-manifest.380cdbda942ceba766d68e9f55d587b0.js  precache-manifest.3a5703ff3c320a0c665274f341a72a76.js  precache-manifest.3fbf7ad7fef3ca51cbc11a87cf113db7.js  precache-manifest.461fa90a0c1b813d477a0acb4a0c2007.js  precache-manifest.4629bd0180a4f76dcf19a244eaebb241.js  precache-manifest.4912a03be75ccd8638046b35e2d95e55.js  (+52 more)
cmake_project_template/: CMakeLists.txt  my_api.cc
docs/: CMakeLists.txt  getting_started.md  http_backend.cc  http_client.cc  http_server.cc  introduction.md  json.cc  metamap.cc  sql.cc  symbol.cc  symbols.hh
libraries/di/: CMakeLists.txt
libraries/di/di/: callable_traits.hh  di.hh
libraries/di/tests/: a.out  di.cc
libraries/http_backend/: CMakeLists.txt  README.md
libraries/http_backend/benchmarks/: CMakeLists.txt  bench.cc  client.hh  mysql_async_bench.cc  symbols.hh
libraries/http_backend/examples/: CMakeLists.txt  blog.cc  symbols.hh
libraries/http_backend/http_backend/: api.hh  cookie.hh  dynamic_routing_table.hh  error.hh  growing_output_buffer.hh  hashmap_http_session.hh  http_authentication.hh  http_backend.hh  http_benchmark.hh  http_listen2.hh  http_serve.hh  input_buffer.hh  lru_cache.hh  mhd.hh  moustique.hh  output_buffer.hh  random_cookie.hh  request.hh  response.hh  serve_directory.hh  sql_crud.hh  sql_crud_api.hh  sql_http_session.hh  ssl_context.hh  symbols.hh  tcp_server.hh  tcp_server_epoll.hh  tcp_server_kqueue.hh  type_hashmap.hh  url_decode.hh  url_unescape.hh
libraries/http_backend/tests/: CMakeLists.txt  bench.cc  crud.cc  hashmap_http_session.cc  hello_world.cc  http_authentication.cc  https.cc  lru_cache.cc  request_parameters.cc  serve_directory.cc  sql_authentication.cc  symbols.hh  test.hh  url_decode.cc  url_parameter.cc
libraries/http_client/: CMakeLists.txt  README.md
libraries/http_client/http_client/: http_client.hh  symbols.hh
libraries/http_client/tests/: symbols.hh  test.cc
libraries/http_server/benchmarks/: CMakeLists.txt  bench.cc  drt.cc  file_serving.cc  hello_world.cc
libraries/http_server/examples/: CMakeLists.txt  blog.cc  hello_world.cc
libraries/json/: CMakeLists.txt  README.md
libraries/json/json/: decode_stringstream.hh  decoder.hh  encoder.hh  error.hh  json.hh  symbols.hh  unicode.hh  utils.hh
libraries/json/tests/: decode.cc  encode.cc  encode_benchmark.cc  graphana.cc  number_parser.cc  readme.cc  symbols.hh  unicode.cc
libraries/metamap/: CMakeLists.txt  README.md
libraries/metamap/metamap/: make.hh  metamap.hh  symbols.hh
libraries/metamap/metamap/algorithms/: cat.hh  forward_tuple_as_metamap.hh  intersection.hh  (+4 more)
libraries/metamap/tests/: cat.cc  forward_tuple_as_metamap.cc  intersection.cc  make.cc  substract.cc  symbols.hh  tuple.cc
libraries/mysql/: CMakeLists.txt  mysql.hh  mysql_connection.hh  mysql_test_server.sh  run_test_with_mysql_server.sh  symbols.hh  test.cc  tutorial.cc
libraries/mysql/mysql/: mysql_connection.hh
libraries/mysql/tests/: simple_query.cc  tutorial.cc
libraries/silicon/: CMakeLists.txt
libraries/silicon/silicon/: api.hh  cookie.hh  dynamic_routing_table.hh  error.hh  file_server.hh  hashmap_http_session.hh  mhd.hh  optional.hh  request.hh  response.hh  serve_directory.hh  silicon.hh  sql_crud.hh  sql_http_session.hh  sql_orm.hh  symbols.hh  url_decode.hh  urldecode.hh
libraries/silicon/tests/: CMakeLists.txt  crud.cc  hashmap_http_session.cc  hello_world.cc  request_parameters.cc  serve_directory.cc  sql_authentication.cc  sql_orm.cc  sqlite_authentication.cc  symbols.hh  test.hh  test_refactor.cc  url_decode.cc  url_parameter.cc
libraries/sql/: CMakeLists.txt  README.md
libraries/sql/sql/: mysql.hh  mysql_async_wrapper.hh  mysql_connection.hh  mysql_connection.hpp  mysql_connection_data.hh  mysql_database.hh  mysql_database.hpp  mysql_result.hh  mysql_result.hpp  mysql_statement.hh  mysql_statement.hpp  mysql_statement_result.hh  mysql_statement_result.hpp  pgsql.hh  pgsql_connection.hh  pgsql_connection_data.hh  pgsql_database.hh  pgsql_result.hh  pgsql_result.hpp  pgsql_statement.hh  pgsql_statement.hpp  pgsql_statement_result.hh  pgsql_statement_result.hpp  sql_common.hh  sql_database.hh  sql_orm.hh  sql_result.hh  sql_result.hpp  sqlite.hh  symbols.hh  type_hashmap.hh
libraries/sql/tests/: generic_sql_tests.hh  mysql.cc  mysql_test_server.sh  pgsql.cc  sql_orm.cc  sql_test_servers.sh  sqlite.cc  symbols.hh  test_mariadb.cnf
libraries/sqlite/: CMakeLists.txt  sqlite.hh  symbols.hh  test.cc
libraries/symbol/: CMakeLists.txt  README.md  test.cc
libraries/symbol/symbol/: ast.hh  symbol.hh  symbol_generator.cc
libraries/symbol/tests/: symbols.hh  test.cc
single_headers/tests/: CMakeLists.txt  http_backend.cc  http_client.cc  http_server.cc  json.cc  lithium.cc  metamap.cc  multiple_units1.cc  multiple_units2.cc  mysql.cc  pgsql.cc  sqlite.cc  symbol.cc
(+342 files in other folders)
